# git-llm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: architecture.md  initial-conversation.md  value-proposition.md
docs/evaluation/: GUI-REVIEW.md  README.md  REPORT.md  SPEC-unimplemented.md  rubric.yaml  run.sh  scenarios.md  scorecard.md  scorecard.schema.json  session-view-embedded.html  session-view-kuchnie.json  session-view.html  session-view.json
docs/evaluation/gold/: expected-artifacts.yaml  expected-phases.yaml  label-gold-assistant.yaml  label-gold-user.yaml  search-queries.yaml  session-2-prompts.yaml
scripts/: .env  eval_backlinks.py  eval_clusters.py  eval_kappa.py  gen_search_index.py  gen_session_gallery.py  gen_session_view.py  scan_sessions.py  test_llm_labeler.sh
src/git_llm/: __init__.py  cli.py  db.py  export.py  extract.py  ingest.py  label.py  models.py  phases.py  pi_bulk.py  pi_import.py  schema.py  search.py  taxonomy.py
tests/: conftest.py  test_export.py  test_extract.py  test_ingest.py  test_ingest_formats.py  test_label.py  test_phases.py  test_pi_bulk.py  test_pi_import.py  test_search.py
tests/fixtures/: pi-session-mini.jsonl
